# pyskip

./: .clang-format  .gitignore  .style.yapf  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
demos/: online_demo.ipynb  prototype.ipynb  taylor_tensor_test.ipynb  time_things.ipynb
include/pyskip/: array.hpp  builder.hpp  pyskip.hpp  tensor.hpp
include/pyskip/detail/: box.hpp  config.hpp  conv.hpp  core.hpp  dags.hpp  errors.hpp  eval.hpp  lang.hpp  mask.hpp  step.hpp  threads.hpp  util.hpp
include/skimpy/: array.hpp  builder.hpp  macros.hpp  skimpy.hpp  tensor.hpp
include/skimpy/detail/: box.hpp  config.hpp  conv.hpp  core.hpp  dags.hpp  defs.hpp  errors.hpp  eval.hpp  lang.hpp  mask.hpp  ranges.hpp  step.hpp  threads.hpp  util.hpp  utils.hpp
notebooks/: benchmark_checkpoint.ipynb  benchmark_some_lower_bound_stuff.ipynb  linear_algebra.ipynb  minecraft.ipynb  minecraft_prototype.ipynb  online_demo.ipynb  profiling.ipynb  prototype.ipynb  pyskip_3d_demo.ipynb  pyskip_bench_playground.ipynb  pyskip_bench_project.ipynb  skimpy_3d_demo.ipynb  skimpy_bench.ipynb  skimpy_bench_playground.ipynb  skimpy_bench_project.ipynb  taylor_tensor_test.ipynb  thomas_tensor_test.ipynb
notebooks/.ipynb_checkpoints/: benchmark_some_lower_bound_stuff-checkpoint.ipynb  online_demo-checkpoint.ipynb  prototype-checkpoint.ipynb  simple_demo-checkpoint.ipynb  skimpy_3d_demo-checkpoint.ipynb
projects/: requirements.txt
projects/pyskip_3d/: .gitignore  CMakeLists.txt  requirements.txt  setup.py
projects/pyskip_3d/notebooks/: marching_cubes.ipynb  marching_cubes_csg.ipynb  render_blurry_minecraft.ipynb  render_minecraft.ipynb  render_minecraft_runs.ipynb  render_voxels_shader.ipynb  render_voxels_simple.ipynb
projects/pyskip_3d/src/: CMakeLists.txt  cpp_ext.cpp  marching_cubes.hpp  utils.hpp  voxels.hpp
projects/pyskip_3d/src/pyskip_3d/: csg.py  isosurface.py  voxels.py
projects/pyskip_3d/tests/: CMakeLists.txt  marching_cubes_test.cpp  utils_test.cpp  voxels_test.cpp
projects/pyskip_3d/tools/: viewer.py
projects/pyskip_bench/: .gitignore  CMakeLists.txt  setup.py
projects/pyskip_bench/src/: CMakeLists.txt  cpp_ext.cpp
projects/pyskip_bench/src/pyskip_bench/: benchmarks.py
projects/pyskip_blox/: .gitignore  setup.py
projects/pyskip_blox/pyskip_blox/: minecraft.py
projects/skimpy_3d/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  requirements.txt  setup.py
projects/skimpy_3d/notebooks/: marching_cubes.ipynb  marching_cubes_csg.ipynb  render_blurry_minecraft.ipynb  render_minecraft.ipynb  render_minecraft_runs.ipynb  render_voxels.ipynb  render_voxels_shader.ipynb  threejs_demo.ipynb
projects/skimpy_3d/notebooks/.ipynb_checkpoints/: render_minecraft-checkpoint.ipynb  render_voxels-checkpoint.ipynb  render_voxels_shader-checkpoint.ipynb  render_voxels_simple-checkpoint.ipynb  threejs_demo-checkpoint.ipynb
projects/skimpy_3d/skimpy_3d/: __init__.py
projects/skimpy_3d/src/: CMakeLists.txt  cpp_ext.cpp  marching_cubes.hpp  utils.hpp  voxels.hpp
projects/skimpy_3d/src/skimpy_3d/: __init__.py  csg.py  isosurface.py  voxels.py
projects/skimpy_3d/tests/: CMakeLists.txt  marching_cubes_test.cpp  utils_test.cpp  voxels_test.cpp
projects/skimpy_3d/tools/: notebooks.py  viewer.py
projects/skimpy_bench/: .gitignore  CMakeLists.txt  setup.py
projects/skimpy_bench/src/: CMakeLists.txt  cpp_ext.cpp  taco_bench.cpp
projects/skimpy_bench/src/skimpy_bench/: benchmarks.py
projects/skimpy_bench/src/skimpy_bench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
projects/skimpy_blox/: .gitignore  setup.py
projects/skimpy_blox/skimpy_blox/: colors.py  minecraft.py
projects/skimpy_blox/skimpy_blox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
projects/skimpy_blox/skimpy_blox/nbt_helper/: chunk.py
py_ext/: skimpy_ext.cpp
py_src/skimpy/: __init__.py  exceptions.py  skimpy_test.py  tensor.py
py_src/tests/: skimpy_test.py
python/: CMakeLists.txt  skimpy_ext.cpp
src/: CMakeLists.txt
src/cpp_ext/: CMakeLists.txt  pyskip_ext.cpp  skimpy_ext.cpp
src/cpp_ext/binds/: arrays.cpp  bool_binds.cpp  builders.cpp  char_binds.cpp  float_binds.cpp  helpers.cpp  helpers.hpp  int_binds.cpp  module_methods.cpp  tensors.cpp  type_binds.hpp
src/pyskip/: config.py  convolve.py  exceptions.py  index.py  io.py  manipulate.py  reduce.py  tensor.py
src/pyskip/tests/: convolve_test.py  pyskip_test.py  reduce_test.py
src/skimpy/: config.py  convolve.py  exceptions.py  functional.py  index.py  io.py  manipulate.py  reduce.py  tensor.py  util.py
src/skimpy/tests/: convolve_test.py  reduce_test.py  skimpy_test.py
src/skimpy_bench/: CMakeLists.txt  cpp_ext.cpp
src/skimpy_blox/: minecraft.py
tests/: CMakeLists.txt  array_test.cpp  box_test.cpp  builder_test.cpp  core_test.cpp  dags_test.cpp  eval_test.cpp  lang_test.cpp  mask_test.cpp  ranges_test.cpp  skimpy_test.cpp  step_test.cpp  tensor_test.cpp  util_test.cpp  utils_test.cpp
tests/benchmarks/: CMakeLists.txt  array_bench.cpp  asmjit_bench.cpp  core_bench.cpp  eval_bench.cpp  merge_bench.cpp  optree_bench.cpp  plan_bench.cpp  ranges_bench.cpp  skimpy_bench.cpp  step_bench.cpp  tensor_bench.cpp
tools/: build.py  clean.py
